[gd_scene load_steps=17 format=2]

[ext_resource path="res://assets/images/hpBarProgress.png" type="Texture" id=1]
[ext_resource path="res://assets/images/hpBarOver.png" type="Texture" id=2]
[ext_resource path="res://scenes/playerUI/playerUI.gd" type="Script" id=3]
[ext_resource path="res://assets/images/spriteAsset.png" type="Texture" id=4]
[ext_resource path="res://assets/fonts/Acme-Regular.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://scenes/playerUI/purchasePanel.tscn" type="PackedScene" id=6]

[sub_resource type="DynamicFont" id=1]
size = 35
outline_size = 4
outline_color = Color( 0, 0, 0, 1 )
extra_spacing_char = 2
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=2]
size = 30
outline_size = 4
outline_color = Color( 0, 0, 0, 1 )
extra_spacing_char = 2
font_data = ExtResource( 5 )

[sub_resource type="Animation" id=3]
resource_name = "sidePanel"
length = 0.3
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("Control:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.25, 0.3 ),
"transitions": PoolRealArray( 0.307786, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 825, 0 ), Vector2( 790, 0 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "sidePanelHide"
length = 0.3
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("Control:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.3 ),
"transitions": PoolRealArray( 0.406126, 1, 0.307786 ),
"update": 0,
"values": [ Vector2( 650, 0 ), Vector2( 700, 0 ), Vector2( 0, 0 ) ]
}

[sub_resource type="DynamicFont" id=5]
size = 55
outline_size = 5
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=6]
size = 60
outline_size = 5
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=7]
size = 150
outline_size = 10
extra_spacing_char = 11
font_data = ExtResource( 5 )

[sub_resource type="Animation" id=8]
length = 0.4
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("ColorRect:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.02, 0.4 ),
"transitions": PoolRealArray( 2.2974, 2.2974, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("ColorRect:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.02, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ false, true, true ]
}

[sub_resource type="Animation" id=9]
length = 0.4
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("ColorRect:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.36, 0.4 ),
"transitions": PoolRealArray( 0.392292, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("ColorRect:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.36, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ true, true, false ]
}

[sub_resource type="Animation" id=10]
resource_name = "fadeOut"
length = 0.3
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("ColorRect2:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.28, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ true, true, false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("ColorRect2:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.28 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[node name="playerUI" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}
purchasePanel = ExtResource( 6 )

[node name="TextureProgress" type="TextureProgress" parent="."]
margin_left = 124.676
margin_top = 53.7755
margin_right = 501.676
margin_bottom = 106.775
rect_scale = Vector2( 0.5, 1 )
value = 100.0
texture_under = ExtResource( 1 )
texture_over = ExtResource( 2 )
texture_progress = ExtResource( 1 )
tint_under = Color( 0, 0, 0, 1 )
tint_over = Color( 1, 0, 0.701961, 1 )
tint_progress = Color( 0.235294, 1, 0.0117647, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="."]

[node name="Control" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="panel" type="Sprite" parent="Control"]
modulate = Color( 0.270588, 0.505882, 0.501961, 1 )
position = Vector2( -24.8046, 187.692 )
rotation = 1.5708
scale = Vector2( 1.41134, 1.45218 )
texture = ExtResource( 4 )
centered = false
region_enabled = true
region_rect = Rect2( 469, 27, 533, 441 )

[node name="sideContNames" type="VBoxContainer" parent="Control"]
margin_left = -591.593
margin_top = 259.0
margin_right = -395.593
margin_bottom = 674.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="hp" type="Label" parent="Control/sideContNames"]
margin_right = 44.0
margin_bottom = 100.0
size_flags_horizontal = 2
size_flags_vertical = 3
custom_fonts/font = SubResource( 1 )
text = "HP"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="exp" type="Label" parent="Control/sideContNames"]
margin_top = 104.0
margin_right = 65.0
margin_bottom = 205.0
size_flags_horizontal = 2
size_flags_vertical = 3
custom_fonts/font = SubResource( 1 )
text = "Exp."
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="bulletDamage" type="Label" parent="Control/sideContNames"]
margin_top = 209.0
margin_right = 196.0
margin_bottom = 310.0
size_flags_horizontal = 2
size_flags_vertical = 3
custom_fonts/font = SubResource( 2 )
text = "Bullet damage"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="coins" type="Label" parent="Control/sideContNames"]
margin_top = 314.0
margin_right = 85.0
margin_bottom = 415.0
size_flags_horizontal = 2
size_flags_vertical = 3
custom_fonts/font = SubResource( 1 )
text = "Coins"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="sideContCounts" type="VBoxContainer" parent="Control"]
margin_left = -391.0
margin_top = 259.0
margin_right = -164.0
margin_bottom = 674.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="hp" type="Label" parent="Control/sideContCounts"]
margin_right = 227.0
margin_bottom = 100.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 1 )
text = "100/100"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="exp" type="Label" parent="Control/sideContCounts"]
margin_top = 104.0
margin_right = 227.0
margin_bottom = 205.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 1 )
text = "20"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="bulletDamage" type="Label" parent="Control/sideContCounts"]
margin_top = 209.0
margin_right = 227.0
margin_bottom = 310.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 2 )
text = "50"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="coins" type="Label" parent="Control/sideContCounts"]
margin_top = 314.0
margin_right = 227.0
margin_bottom = 415.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 1 )
text = "0"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="needItems" type="Node2D" parent="Control"]
position = Vector2( -22.4492, -2.24487 )

[node name="rocket" type="Node2D" parent="Control/needItems"]
modulate = Color( 1, 1, 1, 0.403922 )
position = Vector2( -7.80943, 0 )

[node name="panel" type="Sprite" parent="Control/needItems/rocket"]
position = Vector2( -483.467, 773.012 )
scale = Vector2( 0.178407, 0.338775 )
texture = ExtResource( 4 )
region_enabled = true
region_rect = Rect2( 471.221, 25.1095, 522.112, 438.108 )

[node name="rocket" type="Sprite" parent="Control/needItems/rocket"]
position = Vector2( -483.467, 773.012 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 4 )
region_enabled = true
region_rect = Rect2( 400.789, 765.421, 128.421, 226.316 )

[node name="rocketArms" type="Node2D" parent="Control/needItems"]
modulate = Color( 1, 1, 1, 0.337255 )
position = Vector2( 109.099, 0 )

[node name="panel" type="Sprite" parent="Control/needItems/rocketArms"]
position = Vector2( -483.467, 773.012 )
scale = Vector2( 0.178407, 0.338775 )
texture = ExtResource( 4 )
region_enabled = true
region_rect = Rect2( 471.221, 25.1095, 522.112, 438.108 )

[node name="rocketArms" type="Sprite" parent="Control/needItems/rocketArms"]
position = Vector2( -483.467, 773.012 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 4 )
region_enabled = true
region_rect = Rect2( 38.6842, 759.105, 149.474, 260 )

[node name="energyBall" type="Node2D" parent="Control/needItems"]
modulate = Color( 1, 1, 1, 0.337255 )
position = Vector2( 219.529, 0 )

[node name="panel" type="Sprite" parent="Control/needItems/energyBall"]
position = Vector2( -483.467, 773.012 )
scale = Vector2( 0.178407, 0.338775 )
texture = ExtResource( 4 )
region_enabled = true
region_rect = Rect2( 471.221, 25.1095, 522.112, 438.108 )

[node name="energyBall" type="Sprite" parent="Control/needItems/energyBall"]
position = Vector2( -483.467, 773.012 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 4 )
region_enabled = true
region_rect = Rect2( 568.158, 784.368, 138.947, 188.421 )

[node name="mechanic" type="Node2D" parent="Control/needItems"]
modulate = Color( 1, 1, 1, 0.337255 )
position = Vector2( 329.675, 0 )

[node name="panel" type="Sprite" parent="Control/needItems/mechanic"]
position = Vector2( -483.467, 773.012 )
scale = Vector2( 0.178407, 0.338775 )
texture = ExtResource( 4 )
region_enabled = true
region_rect = Rect2( 471.221, 25.1095, 522.112, 438.108 )

[node name="mechanic" type="Sprite" parent="Control/needItems/mechanic"]
position = Vector2( -483.467, 773.012 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 4 )
region_enabled = true
region_rect = Rect2( 219.737, 761.211, 167.368, 234.737 )

[node name="plus" type="Sprite" parent="Control"]
position = Vector2( -105.511, 312.044 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 4 )
region_enabled = true
region_rect = Rect2( 25, 261, 117, 123 )

[node name="plus2" type="Sprite" parent="Control"]
position = Vector2( -105.511, 520.822 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 4 )
region_enabled = true
region_rect = Rect2( 25, 261, 117, 123 )

[node name="plusHp" type="Button" parent="Control"]
modulate = Color( 1, 1, 1, 0 )
margin_left = -140.0
margin_top = 279.0
margin_right = -73.0
margin_bottom = 346.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="plusBullet" type="Button" parent="Control"]
modulate = Color( 1, 1, 1, 0 )
margin_left = -143.0
margin_top = 493.0
margin_right = -72.0
margin_bottom = 562.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="sidePanel" type="AnimationPlayer" parent="."]
anims/sidePanel = SubResource( 3 )
anims/sidePanelHide = SubResource( 4 )

[node name="hpText" type="Label" parent="."]
margin_left = 33.9795
margin_top = 37.755
margin_right = 104.979
margin_bottom = 106.755
custom_fonts/font = SubResource( 5 )
text = "HP"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 65.1273, 168.01 )
scale = Vector2( 0.8, 0.8 )
texture = ExtResource( 4 )
region_enabled = true
region_rect = Rect2( 15, 150, 90, 102 )

[node name="coinCount" type="Label" parent="."]
margin_left = 124.697
margin_top = 131.825
margin_right = 215.697
margin_bottom = 208.825
custom_fonts/font = SubResource( 6 )
text = "x 0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
visible = false
modulate = Color( 1, 1, 1, 0 )
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="ColorRect"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 7 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "North Forrest
"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="sceneChangePlayer" type="AnimationPlayer" parent="."]
anims/solidBlackFadeIn = SubResource( 8 )
anims/solidBlackFadeOut = SubResource( 9 )

[node name="ColorRect2" type="ColorRect" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/fadeOut = SubResource( 10 )
[connection signal="tween_completed" from="Tween" to="." method="_on_Tween_tween_completed"]
[connection signal="button_down" from="Control/plusHp" to="." method="_on_plusHp_button_down"]
[connection signal="button_down" from="Control/plusBullet" to="." method="_on_plusBullet_button_down"]
[connection signal="animation_finished" from="sceneChangePlayer" to="." method="_on_sceneChangePlayer_animation_finished"]
